12 Haziran Test commit